crates/bevy_ecs/compile_fail/tests/ui/system_query_iter_sort_lifetime_safety.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/system_query_iter_sort_lifetime_safety.rs:LL:CC
   |
LL |     let mut stored: Option<&A> = None;
   |         ---------- `stored` declared here, outside of the closure body
LL |     let mut sorted = iter.sort_by::<&A>(|left, _right| {
   |                                          ---- `left` is a reference that is only valid in the closure body
LL |         // Try to smuggle the lens item out of the closure.
LL |         stored = Some(left);
   |         ^^^^^^^^^^^^^^^^^^^ `left` escapes the closure body here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
